[gd_scene load_steps=4 format=3 uid="uid://01gn5ouphbkx"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_fc2fh"]
[ext_resource type="PackedScene" uid="uid://csbjt7m57x4v0" path="res://Scenes/level.tscn" id="2_50lg4"]
[ext_resource type="Texture2D" uid="uid://s42vykqlow0a" path="res://Sprites/Start Screen Horizontal.png" id="3_ubsca"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_fc2fh")
level_scene = ExtResource("2_50lg4")

[node name="start" type="Button" parent="."]
layout_mode = 0
offset_left = 893.0
offset_top = 754.0
offset_right = 1247.0
offset_bottom = 931.0
text = "start"

[node name="character_select" type="Button" parent="."]
layout_mode = 0
offset_left = 882.0
offset_top = 987.0
offset_right = 1246.0
offset_bottom = 1171.0
text = "character select"

[node name="tutorial" type="Button" parent="."]
layout_mode = 0
offset_left = 893.0
offset_top = 1388.0
offset_right = 1256.0
offset_bottom = 1578.0
text = "how to play"

[node name="StartScreenHorizontal" type="Sprite2D" parent="."]
position = Vector2(1083.5, 812.5)
scale = Vector2(1.82525, 1.84193)
texture = ExtResource("3_ubsca")

[connection signal="button_down" from="start" to="." method="_on_start_button_down"]
[connection signal="button_down" from="character_select" to="." method="_on_character_select_button_down"]
[connection signal="button_down" from="tutorial" to="." method="_on_tutorial_button_down"]
